# speckit-book-hackathon.io

./: .gitignore  IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  README.md  TESTING_TRANSLATION.md
.claude/: settings.local.json
.claude/agents/: api-guardian.md
.specify/memory/: constitution.md
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/scripts/: check_users.py  generate_embeddings.py  semantic_chunker.py  test_embeddings.py
backend/src/: config.py  main.py
backend/src/api/: auth.py  chat.py  deps.py  translate.py
backend/src/models/: translation.py  user.py
backend/src/services/: auth_utils.py  db.py  generation.py  qdrant_client.py  translation.py  vector_db.py
docs/future-work/: openai-agents-sdk-migration.md
frontend/my-website/: TRANSLATION_SYSTEM.md  docusaurus.config.ts  package.json
history/prompts/001-physical-ai-textbook/: 0001-physical-ai-textbook-spec.spec.prompt.md  0002-physical-ai-textbook-plan.plan.prompt.md  0003-generate-implementation-tasks-for-physical-ai-textbook.tasks.prompt.md  0005-cross-artifact-analysis-and-docusaurus-content-generation.misc.prompt.md
history/prompts/002-highlight-text-selection-feature/: 0001-feature-spec-text-selection-discovery.spec.prompt.md  0002-feature-status-update-highlight-complete.misc.prompt.md
history/prompts/003-urdu-translation/: 0001-urdu-translation-feature-specification.spec.prompt.md  (+3 more)
specs/001-physical-ai-textbook/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-highlight-text-selection-feature/: spec.md
(+32 files in other folders)
