[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "better-auth>=0.0.1b9",
    "email-validator>=2.3.0",
    "fastapi>=0.122.0",
    "fastembed>=0.7.3",
    "google-genai>=1.52.0",
    "google-generativeai>=0.8.5",
    "openai-agents>=0.6.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "python-jose[cryptography]>=3.5.0",
    "qdrant-client>=1.10.0",
    "sqlalchemy>=2.0.44",
]
